--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,3 +4,7 @@ export(pm.colors.fractions)
 export(pm.colors.genotypes)
 export(pm.names.fractions)
 export(pm.names.genotypes)
+export(scale_color_fraction)
+export(scale_color_genotype)
+export(scale_fill_fraction)
+export(scale_fill_genotype)
