Fix typo in phila colors and add ggplot palettes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,5 +8,7 @@ export(pm.names.genotypes)
 export(pm.names.phyla)
 export(scale_color_fraction)
 export(scale_color_genotype)
+export(scale_color_phyla)
 export(scale_fill_fraction)
 export(scale_fill_genotype)
+export(scale_fill_phyla)
